<resources>
    <string name="app_name">Ninzi May</string>

    <string name="Play">&#xf04b;</string>
    <string name="Stop">&#xf04d;</string>
    <string name="Next">&#xf051;</string>
    <string name="Previous">&#xf048;</string>
    <string name="Pause">&#xf04c;</string>

    <string name="RepeatOne">&#xf01e;</string>
    <string name="LoopAll">&#xf021;</string>
    <string name="Shuffle">&#xf074;</string>
    <string name="Lyrics">&#xf0f6;</string>

    <string name="FavoriteOn">&#xf004;</string>
    <string name="FavoriteOff">&#xf08a;</string>
    <string name="RegistrationSeal">&#xf0a3;</string>
    <string name="HeadphoneIndicator">&#xf025;</string>

    <string name="Speaker">&#xf027;</string>
    <string name="Volume">&#xf027;</string>
</resources>
