<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ninzimay.mediaplayer.ninzimay.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_1" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LinearLayoutFooter"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:background="@color/transparentBlack">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/LinearLayoutFooterFirstRow"
            android:layout_weight="1"
            android:weightSum="5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shuffle"
                android:id="@+id/btnShuffle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@null"
                android:layout_weight="1"
                android:textColor="@color/lightgray"
                style="?android:attr/buttonStyleSmall"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Previous"
                android:id="@+id/btnBackward"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/btnPlay"
                android:background="@null"
                android:layout_weight="1"
                android:textColor="@color/lightgray"
                style="?android:attr/buttonStyleSmall"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Play"
                android:id="@+id/btnPlay"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/btnPause"
                android:background="@null"
                android:layout_weight="1"
                android:textColor="@color/lightgray"
                style="?android:attr/buttonStyleSmall" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Next"
                android:id="@+id/btnForward"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@null"
                android:layout_weight="1"
                android:textColor="@color/lightgray"
                style="?android:attr/buttonStyleSmall"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RepeatOne"
                android:id="@+id/btnRepeat"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@null"
                android:layout_weight="1"
                android:textColor="@color/lightgray"
                style="?android:attr/buttonStyleSmall"/>

        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:id="@+id/LinearLayoutFooterSecondRow"
            android:layout_weight="1"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.15">
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.1">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Lyrics"
                    android:id="@+id/btnLyric"
                    android:background="@null"
                    android:textColor="@color/lightgray"
                    style="?android:attr/buttonStyleSmall"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.5">
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/LinearLayoutFooterSecondRow_SeekControl"
                    android:layout_weight="0.6"
                    android:weightSum="2">

                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/LinearLayoutFooterSecondRow_SeekControl_FirstRow"
                        android:layout_weight="1"
                        android:weightSum="1">

                        <SeekBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/SeekBar"
                            android:orientation="horizontal" />

                    </LinearLayout>

                    <RelativeLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:id="@+id/LinearLayoutFooterSecondRow_SeekControl_SecondRow"
                        android:layout_weight="1"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/txtStartPoint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/lightgray"
                            android:text="00:11" />

                        <TextView
                            android:id="@+id/txtEndPoint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/lightgray"
                            android:text="33:14" />

                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.1">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FavoriteOn"
                    android:id="@+id/btnFavorite"
                    android:background="@null"
                    android:layout_weight="0.2"
                    android:textColor="@color/lightgray"
                    style="?android:attr/buttonStyleSmall"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.15">
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
